# rust-gRPC-Kafka-microservices-codepix

./: README.md
rust-codepix/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  build.rs  dev.db  diesel.toml  docker-compose.yaml  package-lock.json  package.json  readme.md
rust-codepix/.docker/: entrypoint.sh
rust-codepix/apache-kafka/: docker-compose.yaml
rust-codepix/migrations/2022-04-19-000638_alter_table/: down.sql  up.sql
rust-codepix/migrations/2022-04-19-000802_alter_table_pixkey/: down.sql  up.sql
rust-codepix/migrations/2022-04-19-020316_table_bank/: down.sql  up.sql
rust-codepix/migrations/2022-04-19-032145_alter_table_account_add_field_bank_id/: down.sql  up.sql
rust-codepix/migrations/2022-04-19-232012_alter_table_account_add_colum_pix_keys/: down.sql  up.sql
rust-codepix/migrations/2022-04-20-000140_create_table_transation/: up.sql
rust-codepix/migrations/2022-05-01-151115_alter_table_transaction/: down.sql  up.sql
rust-codepix/migrations/2022-05-01-190116_alter_table_transaction/: down.sql  up.sql
rust-codepix/migrations/2022-063-01-201612_seed_bank_account/: down.sql  up.sql
rust-codepix/prisma/: dev.db  dev.db-journal  schema.prisma
rust-codepix/prisma/dbml/: dev.dbml
rust-codepix/src/: api_error.rs  main.rs
rust-codepix/src/application/: mod.rs
rust-codepix/src/application/factory/: mod.rs
rust-codepix/src/application/grpc/: mod.rs  pixgrpc.rs
rust-codepix/src/application/kafka/: mod.rs  processor.rs  producer.rs
rust-codepix/src/cmd/: cmd.rs  mod.rs
rust-codepix/src/infrastructure/: mod.rs
(+51 files in other folders)
