[package]
name = "rust-codepix"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
validator = { version = "0.14.0", features = ["derive"] }
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
diesel = { version = "1.4.8", features = [
  "postgres",
  "r2d2",
  "numeric",
  "chrono",
] }
diesel_migrations = "1.4.0"
bigdecimal = { version = "0.1.2", features = ["serde"] }
rust-embed = "6.4.0"
tokio = { features = ["macros", "rt", "rt-multi-thread"], version = "1.17.0" }

async-trait = "0.1.52"

tonic = "0.7.1"
prost = "0.10.0"
prost-types = "0.10.0"

derive_more = "0.99.17"
env_logger = "0.9.0"
log = "0.4.14"
dotenv = "0.15.0"
lazy_static = "1.4.0"
structopt = "0.3.26"

[dependencies.rdkafka]
version = "~0.28.0"
features = ["ssl", "sasl"]

[build-dependencies]
tonic-build = "0.7.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
# tokio-stream = "0.1.8"
# futures = "0.3.19"
# mime = "0.3.16"
# prometheus = { version = "0.13.0", features = ["process"] }
# reqwest = { version = "0.11", features = ["json"] }
